src/App.css
body, html {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: 'Arial', sans-serif;
  background-color: #ffffff;
}

.portfolio-section {
  position: relative;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.content-wrapper {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  padding: 0 2rem;
}

.text-box {
  max-width: 33%;
  flex: 1;
  color: #000000;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start; /* Aligns text to the left */
  opacity: .8;
}

.intro-text {
  font-size: 3.5rem;
  font-weight: 700;
  color: #ffffff;
}

.cursor {
  display: inline-block;
  margin-left: 2px;
  width: 1px;
  animation: blink 0.7s infinite;
}

@keyframes blink {
  0%, 50% {
    opacity: 1;
  }
  51%, 100% {
    opacity: 0;
  }
}

.subtitle {
  font-size: 1.8rem;
  color: #808080;
  margin-top: 0.5rem;
}

.intro-description {
  font-size: 1.2rem;
  color: #737373;
  line-height: 1.6;
  max-width: 100%;
  margin-top: 1rem;
  white-space: pre-wrap; /* Preserve formatting */
}

.highlighted {
  background-color: #808080;
  color: #ffffff;
  padding: 0.3rem 0.3rem;
  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
}

.profile-photo {
  max-width: 100%;
  max-height: 400px;
  object-fit: cover;
  border-radius: 8px;
  opacity: .9;
}

.image-box {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: fit-content;
  padding: 0 1rem;
}

@media (max-width: 768px) {
  .content-wrapper {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
  }

  .text-box, .image-box {
    max-width: 100%;
  }

  .image-box {
    margin-top: 2rem;
  }

  .intro-text {
    font-size: 2.5rem;
  }
}

/* Add this CSS */
.code-block {
  font-family: 'Courier New', Courier, monospace;
  background-color: #f5f5f5;
  color: #000000;
  padding: 1rem;
  border: 2px solid #808080; /* Sharp border with grey color */
  border-radius: 4px; /* Adjust as needed for sharpness */
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Slight shadow for a sharper feel */
  width: 100%;
  white-space: pre-wrap; /* Keep formatting */
  overflow-x: auto; /* Enable horizontal scrolling for long code lines */
}

.code-block.highlighted {
  background-color: #808080;
  color: #ffffff;
}

/* Add this to the CSS */
.social-icons {
  opacity: 0;
  visibility: hidden;
  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
}

.social-icons.visible {
  opacity: 1;
  visibility: visible;
}

